<resources>
    <string name="app_name">Studio Medico - Valium</string>
    <string name="username">Username</string>
    <string name="codiceFiscale">Codice Fiscale</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registrazione"><u>Non sei registrato? Registrati</u></string>
    <string name="registrationText">Registrazione</string>
    <string name="welcomeText">Benvenuto</string>
    <string name="nameText">Nome</string>
    <string name="surnameText">Cognome</string>
    <string name="phone">Telefono</string>
    <string name="profile">Profilo</string>
    <string name="dateText">Data di nascita</string>
    <string name="dateApp">Data</string>
    <string name="confirmPassword">Conferma Password</string>
    <string name="registrati">Registrati</string>
    <string name="title_activity_home_utente">HomeUtente</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="centroMedico">Centro Medico</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logo_studio_medico">Studio Medico</string>
    <string name="home_second">Home Second</string>
    <string name="leMieRicette">Le mie ricette</string>
    <string name="nuovaPrenotazione">Nuova prenotazione</string>
    <string name="leMiePrenotazioni">Le mie prenotazioni</string>
    <string name="contatti">Contatti</string>
    <string name="email">Email</string>
    <string name="codicediprova">CodiceDIPROVA</string>
    <string name="orari_disponibili">Orari Disponibili</string>
    <string name="annulla_prenotazione">Annulla Prenotazione</string>
    <string name="logout">Logout</string>
    <string name="vecchia_password">Vecchia Password</string>
    <string name="nuova_password">Nuova Password</string>
    <string name="conferma_nuova_password">Conferma Nuova Password</string>
    <string name="modifica_password">Modifica Password</string>
    <string name="msg_exit">Clicca di nuovo indietro per uscire!</string>
    <string name="punti_prenotazione">Punti prenotazione</string>
    <string name="advisor">I punti prenotazione servono ad effettuare le prenotazioni dei tuoi appuntamenti tramite l\'applicazione. Se il tuo saldo è negativo, devi contattare telefonicamente il tuo medico per prenotare un appuntamento.</string>
    <string name="lista_pazienti">Lista Pazienti</string>
    <string name="lista_prenotazioni">Lista Prenotazioni</string>
    <string name="cerca_paziente">Cerca paziente</string>
    <string name="nome_paziente">Nome Paziente</string>
    <string name="Patologie">Patologie</string>
    <string name="carica_ricetta">Carica Ricetta</string>
    <string name="appuntamenti">Appuntamenti</string>
    <string name="richiedi_ricetta">Richiedi Ricetta</string>
    <string name="sceltaFarmaco">Scegli il farmaco per cui desideri richiedere una ricetta</string>
    <string name="richieste_ricette">Richieste Ricette</string>
    <string name="lista_richieste_ricette">Lista Richieste Ricette</string>

</resources>