<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="40dp"
            >

            <TextView
                android:id="@+id/RegistrationText"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/registrationText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="monospace"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#2196F3"
                android:textSize="24sp"
                android:typeface="monospace"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="280dp"
                android:layout_height="47dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/codiceFiscale">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/codiceFiscale"
                    android:layout_width="280dp"
                    android:layout_height="47dp"
                    android:inputType="textPersonName"
                    android:paddingRight="40dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/RegistrationText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:endIconMode="password_toggle"
                android:id="@+id/passwordHint"
                android:layout_width="280dp"
                android:layout_height="47dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="280dp"
                    android:layout_height="47dp"
                    android:inputType="textPassword"
                    android:paddingRight="40dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/username" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:endIconMode="password_toggle"
                android:id="@+id/confirmPasswordHint"
                android:layout_width="280dp"
                android:layout_height="47dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="36dp"
                android:hint="@string/confirmPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="280dp"
                    android:layout_height="47dp"
                    android:inputType="textPassword"
                    android:paddingRight="40dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="280dp"
                android:layout_height="47dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="36dp"
                android:hint="@string/nameText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="280dp"
                    android:layout_height="47dp"
                    android:inputType="text"
                    android:paddingRight="40dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="280dp"
                android:layout_height="47dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="36dp"
                android:hint="@string/surnameText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/surname"
                    android:layout_width="280dp"
                    android:layout_height="47dp"
                    android:inputType="text"
                    android:paddingRight="40dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birthdayDate"
                android:layout_width="280dp"
                android:layout_height="47dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/dateText">

                <EditText
                    android:id="@+id/birthText"
                    android:layout_width="280dp"
                    android:layout_height="47dp"
                    android:focusableInTouchMode="false"
                    android:inputType="date"
                    android:paddingRight="40dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/surname" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="280dp"
                android:layout_height="47dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="36dp"
                android:hint="@string/phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="280dp"
                    android:layout_height="47dp"
                    android:inputType="text"
                    android:paddingRight="40dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/birthdayDate" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/registrati"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="60dp"
                android:text="@string/registrati"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>