<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaginaPaziente">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:orientation="horizontal"
            android:padding="20dp">

            <ImageView
                android:layout_width="135dp"
                android:layout_height="116dp"
                android:layout_gravity="left"
                android:src="@drawable/logostudiomedico" />

            <ImageView
                android:layout_width="135dp"
                android:layout_height="116dp"
                android:layout_gravity="end"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/profi" />
        </LinearLayout>

        <TextView
            android:id="@+id/nomePaziente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp"
            android:text="@string/nome_paziente"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/bluApplicazione"
            android:textSize="24sp"
            android:typeface="monospace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="47dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/codiceFiscale">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/codiceFiscale"
                android:layout_width="280dp"
                android:layout_height="47dp"
                android:inputType="textPersonName"
                android:paddingRight="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/RegistrationText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/birthdayDate"
            android:layout_width="280dp"
            android:layout_height="47dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/dateText">

            <EditText
                android:id="@+id/birthText"
                android:layout_width="280dp"
                android:layout_height="47dp"
                android:focusableInTouchMode="false"
                android:inputType="date"
                android:paddingRight="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/surname" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="47dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="36dp"
            android:hint="@string/phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="280dp"
                android:layout_height="47dp"
                android:inputType="text"
                android:paddingRight="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/birthdayDate" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="47dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="280dp"
                android:layout_height="47dp"
                android:inputType="text"
                android:paddingRight="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/Patologie">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/patologie"
                android:layout_width="280dp"
                android:layout_height="47dp"
                android:inputType="text"
                android:paddingRight="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/caricaRicetta"
            android:background="@color/bluApplicazione"
            android:textColor="#ffffff"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="48dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="64dp"
            android:enabled="true"
            android:text="@string/carica_ricetta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.537"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/patologie"
            app:layout_constraintVertical_bias="0.24" />
    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>